<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">记账本</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>
    <string name="mobile">手机</string>
    <string name="date">请输入时间</string>
    <string name="log_in">登录</string>
    <string name="register">没有账号？请选择注册</string>
    <string name="title_activity_main">记账本</string>
    <string name="username_error">用户名不得为空</string>
    <string name="password_error">密码不得为空</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">退出登录</string>
    <string name="remark">备注</string>
    <string name="save">保存</string>
    <string name="tip_options">选项</string>
    <string name="confirm_delete">确认删除</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="account">账目</string>
    <string name="add">添加</string>
    <string name="create_account">新建账目</string>
    <string name="account_detail">账目明细</string>
    <string name="account_user">账目共享人</string>
    <string name="account_name">账目名称</string>
    <string name="please_input_account_name">请输入账目名称</string>
    <string name="my">我的</string>
    <string name="create_account_line">新建账目明细</string>
    <string name="account_type">消费类型</string>
    <string name="please_select">请选择</string>
    <string name="change_money">消费金额</string>
    <string name="yuan">元</string>
    <string name="pay_type">支付类型</string>
    <string name="head">head</string>
    <string name="delete">删除</string>

</resources>
