<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    >

    <EditText
        android:id="@+id/edit_user_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        />

    <EditText
        android:id="@+id/edit_user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawablePadding="8dp"
        />

    <EditText
        android:id="@+id/edit_user_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/mobile"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawablePadding="8dp"
        />

    <EditText
        android:id="@+id/edit_user_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/remark"
        android:drawableLeft="@drawable/ic_action_email"
        android:drawablePadding="8dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="32dp">


        <Button
            android:id="@+id/edit_user_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </LinearLayout>




</LinearLayout>