<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/xui_config_color_gray_9">

    <com.xuexiang.xui.widget.actionbar.TitleBar
        android:id="@+id/add_account_line_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        app:tb_dividerColor="@color/design_default_color_primary"
        app:tb_useThemeColor="false"
        app:tb_leftText="回退"
        app:tb_actionPadding="20dp"
        app:tb_titleText="@string/create_account_line" />

    <RelativeLayout
        android:id="@+id/account_select"
        android:background="@color/xui_config_color_white"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/account_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account_name"/>

        <TextView
            android:id="@+id/account_in_account_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/account_select_image" />

        <ImageView
            android:id="@+id/account_select_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_select"
            android:contentDescription="@string/please_select" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/account_type_select"
        android:background="@color/xui_config_color_white"
        android:padding="10dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/account_type_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/account_type"/>

        <TextView
            android:id="@+id/account_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/account_type_select_image" />

        <ImageView
            android:id="@+id/account_type_select_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_select"
            android:contentDescription="@string/please_select" />
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/xui_config_color_white"
        android:padding="10dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/change_money_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_money"/>

        <EditText
            android:id="@+id/change_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="0dp"
            android:layout_toStartOf="@+id/yuan"
            android:layout_toEndOf="@+id/change_money_placeholder"
            android:autofillHints="请输入"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/yuan"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pay_type_select"
        android:background="@color/xui_config_color_white"
        android:padding="10dp"
        android:layout_marginBottom="1dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView
            android:id="@+id/pay_type_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/pay_type"/>

        <TextView
            android:id="@+id/pay_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/pay_type_select_image" />

        <ImageView
            android:id="@+id/pay_type_select_image"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_action_select"
            android:contentDescription="@string/please_select" />
    </RelativeLayout>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        style="@style/RoundButton.Auto"
        android:id="@+id/save_account_line_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:rb_backgroundColor="@color/colorPrimary"
        app:rb_borderColor="@color/colorPrimary"
        android:textColor="@color/xui_config_color_white"
        android:text="@string/save" />

</LinearLayout>