<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_marginTop="16dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="类别"
            />
        <TextView
            android:id="@+id/typevalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/types"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>
<GridView
    android:layout_width="match_parent"
    android:layout_height="93dp"
    android:id="@+id/grid"
    android:numColumns="4"
    android:layout_marginBottom="10dp">

</GridView>
    <!-- TODO: Update blank fragment layout -->
<CheckedTextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawablePadding="8dp"/>
    <EditText
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_action_key"
        android:drawablePadding="8dp"
        />

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/date"
        android:drawableLeft="@drawable/ic_action_email"
        android:inputType="date"
        android:drawablePadding="8dp"
        />
    <EditText
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="增加" />

        <ImageView
            android:id="@+id/cancel_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerInside"
            android:src="@mipmap/cancel"
            android:layout_alignParentBottom="true"/>

</LinearLayout>

